refac: refactor main file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcoin_hold",
   "version": "1.0.0",
   "description": "bitcoin server application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
