--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "johnatan kayevo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
