feat: save password hash instead directly password

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,1 +1,4 @@
-DATABASE_URL = url
+APP_KEY=<APP KEY>
+DATABASE_URL=<URL>
+ENC_KEY_32BYTE_BASE64=<DENCRYPTATION KEY>
+SIG_KEY_64BYTE_BASE64=<ENCRYPTATION KEY>
