--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,3 @@
-APP_KEY=<APP KEY>
+APP_KEY=<KEY>
 DATABASE_URL=<URL>
-ENC_KEY_32BYTE_BASE64=<DENCRYPTATION KEY>
-SIG_KEY_64BYTE_BASE64=<ENCRYPTATION KEY>
+DATABASE_ENCRYPTION_KEY=<KEY>
