--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5",
-    "mongoose-encryption": "^2.1.2"
+    "mongoose": "^7.6.5",
+    "mongoose-encryption": "^2.1.2",
+    "mongoose-field-encryption": "^7.0.1"
   }
 }
