feat: add bitcoin price endpoint and remove unused variables

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,5 @@
 APP_KEY=<KEY>
-DATABASE_URL=<URL>
+DATABASE_URL=mongodb+srv://<URL>
 DATABASE_ENCRYPTION_KEY=<KEY>
+BITCOIN_INFORMATION_URL=https://<URL>/
+BITCOIN_INFORMATION_KEY=<KEY>
